working on portfolio updates

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <a class="navbar-brand" href="./index.html">Eric Choi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -26,32 +25,35 @@
                     <a class="nav-link" href="./about.html">About<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Resume</a>
+                    <a class="nav-link" href="./resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contact</a>
+                    <a class="nav-link" href="./contact.html">Contact</a>
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Portfolio
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">javascript Project: Psychic Game Basic</a>
-                        <a class="dropdown-item" href="#">javascript Project: Word Guess Game Advanced</a>
-                        <a class="dropdown-item" href="#">jQuery Project: Crystal Game Basic</a>
-                        <a class="dropdown-item" href="#">jQuery Project: RPG Star Wars Advanced</a>
-                        <a class="dropdown-item" href="#">javascript Project: Trivia Game Basic</a>
-                        <a class="dropdown-item" href="#">javascript Project: Trivia Game Advanced</a>
-                        <a class="dropdown-item" href="#">Ajax Project: GifTastic using GIPHY API</a>
-                        <a class="dropdown-item" href="#">firebase Project: Train Scheduler Basic</a>
-                        <a class="dropdown-item" href="#">Group Project 1: Study-Buddy</a>
-                    </div>
+                <li class="nav-item">
+                    <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
         </div>
     </nav>
-<h1>Under Construction</h1>
+    <div class="indexContainer">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-lg-12">
+
+                <img src="assets/images/pikePlaceMarket01.jpg" width=100%></div>
+        </div>
+    </div>
+    <nav class="navbar fixed-bottom bg-white logo">
+        <form class="form-inline">
+            <a href="https://github.com/ericjchoi" class="navbar-brand" target="_blank">
+                <img src="assets/images/GitHubLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="https://linkedin.com/in/eric-choi-b4595a183" class="navbar-brand" target="_blank">
+                <img src="assets/images/LinkedInLogoSmall.png" width="30" height="30" alt="">
+            </a>
+        </form>
+    </nav>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
