--- a/portfolio.html
+++ b/portfolio.html
@@ -13,7 +13,8 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
+    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
         <a class="navbar-brand" href="./index.html">Eric Choi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,36 +37,7 @@
             </ul>
         </div>
     </nav>
-    <div class="aboutContainer">
-        <div class="row">
-            <div class="col-xs-12 col-sm-12 col-lg-12"><br><br>
-                <img src="assets/images/eric.JPG" width=50%></div>
-            <div><br>
-                <p class="aboutP">I am an Application Support Engineer
-                    at Fred Hutchinson Cancer Research Center in South Lake
-                    Union area of Seattle, Washington.<br><br>Currently I am supporting software developers
-                    in my team, and also planning for transition to become a software / web developer.<br><br>
-                    Taking Full Stack Web Development courses at the University of Washington Coding Boot Camp
-                    from August 2019 to February 2020 is a great opportunity for me to add both front and back
-                    end web development skills onto my previous numerical
-                    analysis programming experiences using C language on UNIX system.<br><br>Upon completion of this
-                    course, I believe that I can pursue a confident Full Stack Web Developer tasks in my current or
-                    any other potential position.</p><br><br><br>
-            </div>
-        </div>
-    </div>
-
-    <nav class="navbar fixed-bottom bg-white logo">
-        <form class="form-inline">
-            <a href="https://github.com/ericjchoi" class="navbar-brand" target="_blank">
-                <img src="assets/images/GitHubLogoSmall.png" width="30" height="30" alt="">
-            </a>
-            <a href="https://linkedin.com/in/eric-choi-b4595a183" class="navbar-brand" target="_blank">
-                <img src="assets/images/LinkedInLogoSmall.png" width="30" height="30" alt="">
-            </a>
-        </form>
-    </nav>
-
+    <div class="pageContainer">portfolio</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -78,3 +50,22 @@
 </body>
 
 </html>
+
+
+<!-- <li class="nav-item dropdown">
+    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        Portfolio
+    </a>
+    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+        <a class="dropdown-item" href="#">javascript Project: Psychic Game Basic</a>
+        <a class="dropdown-item" href="#">javascript Project: Word Guess Game Advanced</a>
+        <a class="dropdown-item" href="#">jQuery Project: Crystal Game Basic</a>
+        <a class="dropdown-item" href="#">jQuery Project: RPG Star Wars Advanced</a>
+        <a class="dropdown-item" href="#">javascript Project: Trivia Game Basic</a>
+        <a class="dropdown-item" href="#">javascript Project: Trivia Game Advanced</a>
+        <a class="dropdown-item" href="#">Ajax Project: GifTastic using GIPHY API</a>
+        <a class="dropdown-item" href="#">firebase Project: Train Scheduler Basic</a>
+        <a class="dropdown-item" href="#">Group Project 1: Study-Buddy</a>
+    </div>
+</li> -->
