portfolio updates resume under construction

--- a/about.html
+++ b/about.html
@@ -28,9 +28,6 @@
                     <a class="nav-link" href="./resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
@@ -39,9 +36,9 @@
     <div class="aboutContainer">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-lg-12"><br><br>
-                <img src="assets/images/eric.JPG" width=50%></div>
+                <img src="assets/images/eric.JPG" width="50%" style="max-width: 360px;"></div>
             <div><br>
-                <p class="aboutP">I am an Application Support Engineer
+                <p class="aboutP" style="max-width: 700px;">I am an Application Support Engineer
                     at Fred Hutchinson Cancer Research Center in South Lake
                     Union area of Seattle, Washington.<br><br>Currently I am supporting software developers
                     in my team, and also planning for transition to become a software / web developer.<br><br>
@@ -62,6 +59,9 @@
             </a>
             <a href="https://linkedin.com/in/eric-choi-b4595a183" class="navbar-brand" target="_blank">
                 <img src="assets/images/LinkedInLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="mailto:ericjongilchoi@gmail.com" class="navbar-brand" target="_blank">
+                <img src="assets/images/envelope.png" width="30" height="30" alt="">
             </a>
         </form>
     </nav>
