--- a/index.html
+++ b/index.html
@@ -28,9 +28,6 @@
                     <a class="nav-link" href="./resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
@@ -39,8 +36,8 @@
     <div class="indexContainer">
         <div class="row">
             <div class="col-xs-12 col-sm-12 col-lg-12">
-
-                <img src="assets/images/pikePlaceMarket01.jpg" width=100%></div>
+                <img src="assets/images/pikePlaceMarket01.jpg" width=100%>
+            </div>
         </div>
     </div>
     <nav class="navbar fixed-bottom bg-white logo">
@@ -50,6 +47,9 @@
             </a>
             <a href="https://linkedin.com/in/eric-choi-b4595a183" class="navbar-brand" target="_blank">
                 <img src="assets/images/LinkedInLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="mailto:ericjongilchoi@gmail.com" class="navbar-brand" target="_blank">
+                <img src="assets/images/envelope.png" width="30" height="30" alt="">
             </a>
         </form>
     </nav>
@@ -63,6 +63,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
