--- a/resume.html
+++ b/resume.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <a class="navbar-brand" href="./index.html">Eric Choi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,15 +28,29 @@
                     <a class="nav-link" href="./resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
         </div>
     </nav>
-    <div class="pageContainer">resume</div>
+    <div class="indexContainer">
+        <br><br><br>
+        <h1>Under Construction</h1>
+    </div>
+    <nav class="navbar fixed-bottom bg-white logo">
+        <form class="form-inline">
+            <a href="https://github.com/ericjchoi" class="navbar-brand" target="_blank">
+                <img src="assets/images/GitHubLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="https://linkedin.com/in/eric-choi-b4595a183" class="navbar-brand" target="_blank">
+                <img src="assets/images/LinkedInLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="mailto:ericjongilchoi@gmail.com" class="navbar-brand" target="_blank">
+                <img src="assets/images/envelope.png" width="30" height="30" alt="">
+            </a>
+        </form>
+    </nav>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -47,6 +60,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+    <script src="assets/javascript/app.js"></script>
 </body>
 
 </html>
