--- a/portfolio.html
+++ b/portfolio.html
@@ -13,8 +13,7 @@
 </head>
 
 <body>
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-light"> -->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
         <a class="navbar-brand" href="./index.html">Eric Choi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -29,15 +28,111 @@
                     <a class="nav-link" href="./resume.html">Resume</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="./contact.html">Contact</a>
-                </li>
-                <li class="nav-item">
                     <a class="nav-link" href="./portfolio.html">Portfolio</a>
                 </li>
             </ul>
         </div>
-    </nav>
-    <div class="pageContainer">portfolio</div>
+    </nav><br><br><br>
+
+    <div class="portfolioContainer">
+        <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Psychic Game<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>JavaScript project #1</h6>
+                <a href="https://github.com/ericjchoi/Psychic-Game" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/Psychic-Game/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">Word Guess Game<br>
+            <div class="card-footer bg-transparent border-dark">
+                <h6>JavaScript project #2</h6>
+                <a href="https://github.com/ericjchoi/Word-Guess-Game" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/Word-Guess-Game/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">Crystal Game<br>
+            <div class="card-footer bg-transparent border-secondary">
+                <h6>jQuery project #1</h6>
+                <a href="https://github.com/ericjchoi/unit-4-game" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/unit-4-game/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">RPG Star Wars<br>
+            <div class="card-footer bg-transparent border-dark">
+                <h6>jQuery project #2</h6>
+                <a href="https://github.com/ericjchoi/RPG-Star-Wars" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/RPG-Star-Wars/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">Trivia Game I<br>
+            <div class="card-footer bg-transparent border-dark">
+                <h6>jQuery project #3</h6>
+                <a href="https://github.com/ericjchoi/TriviaGameBasic" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/TriviaGameBasic/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Trivia Game II<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>jQuery project #4</h6>
+                <a href="https://github.com/ericjchoi/TriviaGameAdvanced" class="badge badge-success"
+                    style="opacity: 0.8;" target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/TriviaGameAdvanced/" class="badge badge-danger"
+                    style="opacity: 0.8;" target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">GifTastic using GIPHY
+            API<br>
+            <div class="card-footer bg-transparent border-dark">
+                <h6>Ajax project</h6>
+                <a href="https://github.com/ericjchoi/GifTastic" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/GifTastic/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">Train Scheduler<br>
+            <div class="card-footer bg-transparent border-secondary">
+                <h6>Firebase project</h6>
+                <a href="https://github.com/ericjchoi/FirebaseAssignmentBasic" class="badge badge-success"
+                    style="opacity: 0.8;" target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/FirebaseAssignmentBasic/" class="badge badge-danger"
+                    style="opacity: 0.8;" target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Study-Buddy<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>Group project #1</h6>
+                <a href="https://github.com/jlcoden/Study-Buddy" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://jlcoden.github.io/Study-Buddy/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+    </div>
+
+    <nav class="navbar fixed-bottom bg-white logo">
+        <form class="form-inline">
+            <a href="https://github.com/ericjchoi" class="navbar-brand" target="_blank">
+                <img src="assets/images/GitHubLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="https://linkedin.com/in/eric-choi-b4595a183" class="navbar-brand" target="_blank">
+                <img src="assets/images/LinkedInLogoSmall.png" width="30" height="30" alt="">
+            </a>
+            <a href="mailto:ericjongilchoi@gmail.com" class="navbar-brand" target="_blank">
+                <img src="assets/images/envelope.png" width="30" height="30" alt="">
+            </a>
+        </form>
+    </nav><br><br><br>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
@@ -50,22 +145,3 @@
 </body>
 
 </html>
-
-
-<!-- <li class="nav-item dropdown">
-    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
-        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-        Portfolio
-    </a>
-    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-        <a class="dropdown-item" href="#">javascript Project: Psychic Game Basic</a>
-        <a class="dropdown-item" href="#">javascript Project: Word Guess Game Advanced</a>
-        <a class="dropdown-item" href="#">jQuery Project: Crystal Game Basic</a>
-        <a class="dropdown-item" href="#">jQuery Project: RPG Star Wars Advanced</a>
-        <a class="dropdown-item" href="#">javascript Project: Trivia Game Basic</a>
-        <a class="dropdown-item" href="#">javascript Project: Trivia Game Advanced</a>
-        <a class="dropdown-item" href="#">Ajax Project: GifTastic using GIPHY API</a>
-        <a class="dropdown-item" href="#">firebase Project: Train Scheduler Basic</a>
-        <a class="dropdown-item" href="#">Group Project 1: Study-Buddy</a>
-    </div>
-</li> -->
