LIRI node app and bamazon app added

--- a/portfolio.html
+++ b/portfolio.html
@@ -117,6 +117,24 @@
                     target="_blank">Run</a>
             </div>
         </button>
+        <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">LIRI Bot<br>
+            <div class="card-footer bg-transparent border-dark">
+                <h6>Node.js project #1</h6>
+                <a href="https://github.com/ericjchoi/liri-node-app" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://github.com/ericjchoi/liri-node-app" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">Bamazon<br>
+            <div class="card-footer bg-transparent border-secondary">
+                <h6>MySQL project #1</h6>
+                <a href="https://github.com/ericjchoi/bamazon" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://github.com/ericjchoi/bamazon" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
     </div>
 
     <nav class="navbar fixed-bottom bg-white logo">
