FriendFinder added to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -135,8 +135,16 @@
                     target="_blank">Run</a>
             </div>
         </button>
+        <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">Friend Finder<br>
+            <div class="card-footer bg-transparent border-dark">
+                <h6>Node Express Ajax Heroku project</h6>
+                <a href="https://github.com/ericjchoi/FriendFinder" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://infinite-fortress-35051.herokuapp.com/" class="badge badge-danger"
+                    style="opacity: 0.8;" target="_blank">Run</a>
+            </div>
+        </button>
     </div>
-
     <nav class="navbar fixed-bottom bg-white logo">
         <form class="form-inline">
             <a href="https://github.com/ericjchoi" class="navbar-brand" target="_blank">
