--- a/portfolio.html
+++ b/portfolio.html
@@ -153,6 +153,15 @@
                     target="_blank">Run</a>
             </div>
         </button>
+        <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">Cajarilla Marketplace<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>Group project #2</h6>
+                <a href="https://github.com/lamashree/Project-2" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://cajarilla-marketplace.herokuapp.com/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
     </div>
     <nav class="navbar fixed-bottom bg-white logo">
         <form class="form-inline">
