Mongo_Scraper added

--- a/portfolio.html
+++ b/portfolio.html
@@ -37,7 +37,7 @@
     <div class="portfolioContainer">
         <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Psychic Game<br>
             <div class="card-footer bg-transparent border-primary">
-                <h6>JavaScript project #1</h6>
+                <h6>JavaScript #1</h6>
                 <a href="https://github.com/ericjchoi/Psychic-Game" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/Psychic-Game/" class="badge badge-danger" style="opacity: 0.8;"
@@ -46,7 +46,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">Word Guess Game<br>
             <div class="card-footer bg-transparent border-dark">
-                <h6>JavaScript project #2</h6>
+                <h6>JavaScript #2</h6>
                 <a href="https://github.com/ericjchoi/Word-Guess-Game" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/Word-Guess-Game/" class="badge badge-danger" style="opacity: 0.8;"
@@ -55,7 +55,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">Crystal Game<br>
             <div class="card-footer bg-transparent border-secondary">
-                <h6>jQuery project #1</h6>
+                <h6>jQuery #1</h6>
                 <a href="https://github.com/ericjchoi/unit-4-game" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/unit-4-game/" class="badge badge-danger" style="opacity: 0.8;"
@@ -64,7 +64,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">RPG Star Wars<br>
             <div class="card-footer bg-transparent border-dark">
-                <h6>jQuery project #2</h6>
+                <h6>jQuery #2</h6>
                 <a href="https://github.com/ericjchoi/RPG-Star-Wars" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/RPG-Star-Wars/" class="badge badge-danger" style="opacity: 0.8;"
@@ -73,7 +73,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">Trivia Game I<br>
             <div class="card-footer bg-transparent border-dark">
-                <h6>jQuery project #3</h6>
+                <h6>jQuery #3</h6>
                 <a href="https://github.com/ericjchoi/TriviaGameBasic" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/TriviaGameBasic/" class="badge badge-danger" style="opacity: 0.8;"
@@ -82,7 +82,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Trivia Game II<br>
             <div class="card-footer bg-transparent border-primary">
-                <h6>jQuery project #4</h6>
+                <h6>jQuery #4</h6>
                 <a href="https://github.com/ericjchoi/TriviaGameAdvanced" class="badge badge-success"
                     style="opacity: 0.8;" target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/TriviaGameAdvanced/" class="badge badge-danger"
@@ -92,7 +92,7 @@
         <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">GifTastic using GIPHY
             API<br>
             <div class="card-footer bg-transparent border-dark">
-                <h6>Ajax project</h6>
+                <h6>Ajax</h6>
                 <a href="https://github.com/ericjchoi/GifTastic" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/GifTastic/" class="badge badge-danger" style="opacity: 0.8;"
@@ -101,7 +101,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">Train Scheduler<br>
             <div class="card-footer bg-transparent border-secondary">
-                <h6>Firebase project</h6>
+                <h6>Firebase</h6>
                 <a href="https://github.com/ericjchoi/FirebaseAssignmentBasic" class="badge badge-success"
                     style="opacity: 0.8;" target="_blank">Code</a>
                 <a href="https://ericjchoi.github.io/FirebaseAssignmentBasic/" class="badge badge-danger"
@@ -119,7 +119,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">LIRI Bot<br>
             <div class="card-footer bg-transparent border-dark">
-                <h6>Node.js project #1</h6>
+                <h6>Node.js #1</h6>
                 <a href="https://github.com/ericjchoi/liri-node-app" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://github.com/ericjchoi/liri-node-app" class="badge badge-danger" style="opacity: 0.8;"
@@ -128,7 +128,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">Bamazon<br>
             <div class="card-footer bg-transparent border-secondary">
-                <h6>MySQL project #1</h6>
+                <h6>MySQL #1</h6>
                 <a href="https://github.com/ericjchoi/bamazon" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://github.com/ericjchoi/bamazon" class="badge badge-danger" style="opacity: 0.8;"
@@ -137,7 +137,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">Friend Finder<br>
             <div class="card-footer bg-transparent border-dark">
-                <h6>Node Express Ajax Heroku project</h6>
+                <h6>Node Express Ajax Heroku</h6>
                 <a href="https://github.com/ericjchoi/FriendFinder" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://infinite-fortress-35051.herokuapp.com/" class="badge badge-danger"
@@ -146,7 +146,7 @@
         </button>
         <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Eat Da Burger<br>
             <div class="card-footer bg-transparent border-primary">
-                <h6>Node Express Handlebars ORM MVC MySQL Heroku project</h6>
+                <h6>Node Express Handlebars ORM MVC MySQL Heroku</h6>
                 <a href="https://github.com/ericjchoi/burger" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://aqueous-tundra-65909.herokuapp.com/" class="badge badge-danger" style="opacity: 0.8;"
@@ -159,6 +159,15 @@
                 <a href="https://github.com/lamashree/Project-2" class="badge badge-success" style="opacity: 0.8;"
                     target="_blank">Code</a>
                 <a href="https://cajarilla-marketplace.herokuapp.com/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-info" style="max-width: 11rem;">Mongo_Scraper<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>Node Express Handlebars MongoDB Mongoose Heroku</h6>
+                <a href="https://github.com/ericjchoi/Mongo_Scraper" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://pure-sierra-54185.herokuapp.com/" class="badge badge-danger" style="opacity: 0.8;"
                     target="_blank">Run</a>
             </div>
         </button>
