--- a/portfolio.html
+++ b/portfolio.html
@@ -171,6 +171,33 @@
                     target="_blank">Run</a>
             </div>
         </button>
+        <button type="button" class="btn btn-lg btn-outline-warning" style="max-width: 11rem;">clicky-game<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>HTML CSS Javacsript React JSX npm packages</h6>
+                <a href="https://github.com/ericjchoi/clicky-game" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://ericjchoi.github.io/clicky-game/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-danger" style="max-width: 11rem;">google-books<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>HTML CSS Javascript Bootstrap node npm packages Google Books API Axios MongoDB mongoose React JSX</h6>
+                <a href="https://github.com/ericjchoi/google-books" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://shrouded-reef-42849.herokuapp.com/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
+        <button type="button" class="btn btn-lg btn-outline-secondary" style="max-width: 11rem;">VolunTeam!<br>
+            <div class="card-footer bg-transparent border-primary">
+                <h6>Group project #3</h6>
+                <a href="https://github.com/ajperkins92/Project-3" class="badge badge-success" style="opacity: 0.8;"
+                    target="_blank">Code</a>
+                <a href="https://quiet-hamlet-85082.herokuapp.com/" class="badge badge-danger" style="opacity: 0.8;"
+                    target="_blank">Run</a>
+            </div>
+        </button>
     </div>
     <nav class="navbar fixed-bottom bg-white logo">
         <form class="form-inline">
