--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <a class="navbar-brand" href="./index.html">Eric Choi</a>
+        <a class="navbar-brand" href="./index.html" style="font-weight: lighter; font-size: 4rem;">Eric Choi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,23 +33,28 @@
             </ul>
         </div>
     </nav>
+    <br><br>
     <div class="aboutContainer">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-lg-12"><br><br>
-                <img src="assets/images/eric.JPG" width="50%" style="max-width: 200px;"></div>
-            <div><br>
-                <p class="aboutP" style="max-width: 700px;">I am an Application Support Engineer
-                    at Fred Hutchinson Cancer Research Center in South Lake
-                    Union area of Seattle, Washington.<br><br>Currently I am supporting software developers
-                    in my team, and also planning for transition to become a software / web developer.<br><br>
-                    Taking Full Stack Web Development courses at the University of Washington Coding Boot Camp
-                    from August 2019 to February 2020 is a great opportunity for me to add both front and back
-                    end web development skills onto my previous numerical
-                    analysis programming experiences using C language on UNIX system.<br><br>Upon completion of this
-                    course, I believe that I can pursue a confident Full Stack Web Developer tasks in my current or
-                    any other potential position.</p><br><br><br>
-            </div>
+            <br><br>
+            <p class="aboutP">
+                <marquee behavior="alternate" direction="left" scrollamount="3"><img src="assets/images/eric.JPG"
+                        width="50%" style="max-width: 150px;">
         </div>
+        </marquee>
+        <marquee behavior="scroll" direction="left" scrollamount="4" class="line1">Full Stack Web Developer with a
+            background in healthcare research domain and electrical engineering.</marquee>
+        <marquee behavior="scroll" direction="left" scrollamount="5" class="line2">
+            Goal-driven problem solving and client-oriented coding services.</marquee>
+        <marquee behavior="scroll" direction="left" scrollamount="6" class="line3">Evangelist of minimalistic
+            visual creativity and stable functionality.</marquee>
+        <marquee behavior="scroll" direction="left" scrollamount="7" class="line4">Numerical analysis programming
+            experiences using ANSI C language with Solaris UNIX on Sun Microsystems Workstarion.</marquee>
+        <marquee behavior="scroll" direction="left" scrollamount="8" class="line5">Telecommunication Antenna design and
+            prototyping experiences with Moment Method and FORTRAN programming.</marquee>
+        </p>
+    </div>
+    </div>
     </div>
 
     <nav class="navbar fixed-bottom bg-white logo">
@@ -63,6 +68,10 @@
             <a href="mailto:ericjongilchoi@gmail.com" class="navbar-brand" target="_blank">
                 <img src="assets/images/envelope.png" width="30" height="30" alt="">
             </a>
+            <h4><span class="badge badge-pill badge-dark" style="margin-top: 0.6rem; font-weight: lighter;"><a
+                        href="assets/images/resume_eric_choi_uw_coding.pdf" download style="color:white;">Download
+                        Resume in PDF</a></span>
+            </h4>
         </form>
     </nav>
 
