--- a/resume.html
+++ b/resume.html
@@ -14,7 +14,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top">
-        <a class="navbar-brand" href="./index.html">Eric Choi</a>
+        <a class="navbar-brand" href="./index.html" style="font-weight: lighter; font-size: 4rem;">Eric Choi</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -33,9 +33,14 @@
             </ul>
         </div>
     </nav>
+    <br><br>
     <div class="indexContainer">
-        <br><br><br>
-        <h1>Under Construction</h1>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-lg-12">
+                <img src="assets/images/resume_eric_choi_uw_coding_page1.jpg" width=100%>
+                <img src="assets/images/resume_eric_choi_uw_coding_page2.jpg" width=100%>
+            </div>
+        </div>
     </div>
     <nav class="navbar fixed-bottom bg-white logo">
         <form class="form-inline">
@@ -48,6 +53,10 @@
             <a href="mailto:ericjongilchoi@gmail.com" class="navbar-brand" target="_blank">
                 <img src="assets/images/envelope.png" width="30" height="30" alt="">
             </a>
+            <h4><span class="badge badge-pill badge-dark" style="margin-top: 0.6rem; font-weight: lighter;"><a
+                        href="assets/images/resume_eric_choi_uw_coding.pdf" download style="color:white;">Download
+                        Resume in PDF</a></span>
+            </h4>
         </form>
     </nav>
 
