Revision of about.html

--- a/about.html
+++ b/about.html
@@ -33,11 +33,23 @@
             </ul>
         </div>
     </nav>
-    <br><br>
+    <br><br><br><br><br><br>
     <div class="aboutContainer">
         <div class="row">
             <br><br>
             <p class="aboutP">
+                <img src="assets/images/eric.JPG" width="50%" style="max-width: 150px;">
+        </div>
+        Full Stack Web Developer with a
+        background in healthcare research domain and electrical engineering.
+        Goal-driven problem solving and client-oriented coding services.
+        Evangelist of minimalistic
+        visual creativity and stable functionality.
+        Numerical analysis programming
+        experiences using ANSI C language with Solaris UNIX on Sun Microsystems Workstarion.
+        Telecommunication Antenna design and prototyping experiences with Moment Method and FORTRAN programming.
+        </p>
+        <!-- <p class="aboutP">
                 <marquee behavior="alternate" direction="left" scrollamount="3"><img src="assets/images/eric.JPG"
                         width="50%" style="max-width: 150px;">
         </div>
@@ -52,7 +64,7 @@
             experiences using ANSI C language with Solaris UNIX on Sun Microsystems Workstarion.</marquee>
         <marquee behavior="scroll" direction="left" scrollamount="8" class="line5">Telecommunication Antenna design and
             prototyping experiences with Moment Method and FORTRAN programming.</marquee>
-        </p>
+        </p> -->
     </div>
     </div>
     </div>
