--- a/about.html
+++ b/about.html
@@ -38,16 +38,18 @@
         <div class="row">
             <br><br>
             <p class="aboutP">
-                <img src="assets/images/eric.JPG" width="50%" style="max-width: 150px;">
+                <img src="assets/images/eric.JPG" style="max-width: 150px;">
         </div>
-        Full Stack Web Developer with a
-        background in healthcare research domain and electrical engineering.
-        Goal-driven problem solving and client-oriented coding services.
-        Evangelist of minimalistic
-        visual creativity and stable functionality.
-        Numerical analysis programming
-        experiences using ANSI C language with Solaris UNIX on Sun Microsystems Workstarion.
-        Telecommunication Antenna design and prototyping experiences with Moment Method and FORTRAN programming.
+        <ul>
+            <li>Full Stack Web Developer with a background in healthcare research domain and electrical engineering.
+            </li>
+            <li>Goal-driven problem solving and client-oriented coding services.</li>
+            <li>Evangelist of minimalistic visual creativity and stable functionality.</li>
+            <li>Numerical analysis programming experiences using ANSI C language with Solaris UNIX on Sun Microsystems
+                Workstarion.</li>
+            <li>Telecommunication Antenna design and prototyping experiences with Moment Method and FORTRAN programming.
+            </li>
+        </ul>
         </p>
         <!-- <p class="aboutP">
                 <marquee behavior="alternate" direction="left" scrollamount="3"><img src="assets/images/eric.JPG"
