Revision of about.html

--- a/about.html
+++ b/about.html
@@ -33,12 +33,12 @@
             </ul>
         </div>
     </nav>
-    <br><br><br><br><br><br>
+    <br><br><br><br><br>
     <div class="aboutContainer">
         <div class="row">
             <br><br>
             <p class="aboutP">
-                <img src="assets/images/eric.JPG" style="max-width: 150px;">
+                <img src="assets/images/eric.JPG" style="max-width: 110px; text-align: center;">
         </div>
         <ul>
             <li>Full Stack Web Developer with a background in healthcare research domain and electrical engineering.
