Revision of about.html

--- a/about.html
+++ b/about.html
@@ -37,8 +37,8 @@
     <div class="aboutContainer">
         <div class="row">
             <br><br>
-            <p class="aboutP">
-                <img src="assets/images/eric.JPG" style="max-width: 110px; text-align: center;">
+            <span class="profileImage">
+                <img src="assets/images/eric.JPG" style="max-width: 110px;"></span>
         </div>
         <ul>
             <li>Full Stack Web Developer with a background in healthcare research domain and electrical engineering.
@@ -50,25 +50,6 @@
             <li>Telecommunication Antenna design and prototyping experiences with Moment Method and FORTRAN programming.
             </li>
         </ul>
-        </p>
-        <!-- <p class="aboutP">
-                <marquee behavior="alternate" direction="left" scrollamount="3"><img src="assets/images/eric.JPG"
-                        width="50%" style="max-width: 150px;">
-        </div>
-        </marquee>
-        <marquee behavior="scroll" direction="left" scrollamount="4" class="line1">Full Stack Web Developer with a
-            background in healthcare research domain and electrical engineering.</marquee>
-        <marquee behavior="scroll" direction="left" scrollamount="5" class="line2">
-            Goal-driven problem solving and client-oriented coding services.</marquee>
-        <marquee behavior="scroll" direction="left" scrollamount="6" class="line3">Evangelist of minimalistic
-            visual creativity and stable functionality.</marquee>
-        <marquee behavior="scroll" direction="left" scrollamount="7" class="line4">Numerical analysis programming
-            experiences using ANSI C language with Solaris UNIX on Sun Microsystems Workstarion.</marquee>
-        <marquee behavior="scroll" direction="left" scrollamount="8" class="line5">Telecommunication Antenna design and
-            prototyping experiences with Moment Method and FORTRAN programming.</marquee>
-        </p> -->
-    </div>
-    </div>
     </div>
 
     <nav class="navbar fixed-bottom bg-white logo">
