Revision of about.html

--- a/about.html
+++ b/about.html
@@ -38,15 +38,15 @@
         <div class="row">
             <br><br>
             <span class="profileImage">
-                <img src="assets/images/eric.JPG" style="max-width: 110px;"></span>
+                <img src="assets/images/eric.JPG" style="max-width: 150px;"></span>
         </div>
         <ul>
             <li>Full Stack Web Developer with a background in healthcare research domain and electrical engineering.
-            </li>
-            <li>Goal-driven problem solving and client-oriented coding services.</li>
-            <li>Evangelist of minimalistic visual creativity and stable functionality.</li>
+            </li><br>
+            <li>Goal-driven problem solving and client-oriented coding services.</li><br>
+            <li>Evangelist of minimalistic visual creativity and stable functionality.</li><br>
             <li>Numerical analysis programming experiences using ANSI C language with Solaris UNIX on Sun Microsystems
-                Workstarion.</li>
+                Workstarion.</li><br>
             <li>Telecommunication Antenna design and prototyping experiences with Moment Method and FORTRAN programming.
             </li>
         </ul>
